[workspace]
members = ["pubsub-tokio"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
rand = "0.9"
snafu = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "fmt",
  "tracing-log",
] }
