[package]
authors = ["Maksim Makarov aka pr0n1x <maxim.pronix@gmail.com>"]
edition = "2021"
description = "Fun-out pattern implementation based on tokio mpsc channels"
name = "pubsub-tokio"
license = "MIT OR Apache-2.0"
keywords = ["pubsub", "fan-out", "tokio", "async", "channels"]
repository = "github.com/pr0n1x/pubsub-tokio"
version = "1.0.0"

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, optional = true, features = ["full"] }
tokio-util = { workspace = true, features = ["default", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
futures.workspace = true
tokio-stream.workspace = true

[features]
testing = ["dep:tracing-subscriber"]
